--- a/templates/index.html
+++ b/templates/index.html
@@ -33,7 +33,7 @@
         class="bg-white border-2 border-black rounded-lg shadow mx-auto max-w-none px-4 py-5 sm:px-6 space-y-3">
         <!-- Create Post Card Top -->
         <div>
-          <div class="flex items-start space-x-3">
+          <div class="flex items-start /space-x-3/">
             <!-- User Avatar -->
             <div class="flex-shrink-0">
               <img
@@ -46,7 +46,7 @@
             <!-- Content -->
             <div class="text-gray-700 font-normal w-full">
               <textarea
-                class="block w-full pt-2 text-gray-900 rounded-lg border-none outline-none"
+                class="block w-full pt-2 text-gray-900 rounded-lg border-none outline-none focus:ring-0 focus:ring-offset-0"
                 name="barta"
                 rows="2"
                 placeholder="What's going on, Shamim?"></textarea>
