Image Cards' Image Height Adjusted

--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,6 @@
       defer
       src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
 
-
     <link
       rel="preconnect"
       href="https://fonts.googleapis.com" />
@@ -644,7 +643,7 @@
                   <span class="sr-only">Like</span>
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
-                    fill="none"
+                    fill="currentColor"
                     viewBox="0 0 24 24"
                     stroke-width="2"
                     stroke="currentColor"
@@ -771,8 +770,8 @@
           <!-- Content -->
           <div class="py-4 text-gray-700 font-normal space-y-2">
             <img
-              src="https://images.pexels.com/photos/6260993/pexels-photo-6260993.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
-              class="h-auto w-full rounded-lg object-cover"
+              src="https://images.pexels.com/photos/6261178/pexels-photo-6261178.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+              class="min-h-auto w-full rounded-lg object-cover max-h-64 md:max-h-72"
               alt="" />
             <p>Beautiful 😍😘 Innit?</p>
           </div>
