Personal Profile Page Added

--- a/templates/index.html
+++ b/templates/index.html
@@ -35,7 +35,9 @@
           <div class="flex h-16 justify-between">
             <div class="flex">
               <div class="flex flex-shrink-0 items-center">
-                <h2 class="font-bold text-2xl">Barta</h2>
+                <a href="/">
+                  <h2 class="font-bold text-2xl">Barta</h2>
+                </a>
               </div>
               <div class="hidden sm:ml-6 sm:flex sm:space-x-8">
                 <!-- Current: "border-gray-800 text-gray-900 font-semibold", Default: "border-transparent text-gray-600 hover:border-gray-300 hover:text-gray-800" -->
@@ -269,7 +271,8 @@
       </nav>
     </header>
 
-    <main class="container max-w-xl mx-auto space-y-8 mt-8 px-2 md:px-0">
+    <main
+      class="container max-w-xl mx-auto space-y-8 mt-8 px-2 md:px-0 min-h-screen">
       <!-- Barta Create Post Card -->
       <form
         method="POST"
