--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -6,7 +6,9 @@
     <div class="flex h-16 justify-between">
       <div class="flex">
         <div class="flex flex-shrink-0 items-center">
-          <h2 class="font-bold text-2xl">Barta</h2>
+          <a href="/">
+            <h2 class="font-bold text-2xl">Barta</h2>
+          </a>
         </div>
         <div class="hidden sm:ml-6 sm:flex sm:space-x-8">
           <!-- Current: "border-gray-800 text-gray-900 font-semibold", Default: "border-transparent text-gray-600 hover:border-gray-300 hover:text-gray-800" -->
