Code Refactored, Profile Edit Page Added, WIP

--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -105,7 +105,7 @@
             aria-labelledby="user-menu-button"
             tabindex="-1">
             <a
-              href="#"
+              href="./profile.html"
               class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100"
               role="menuitem"
               tabindex="-1"
@@ -113,12 +113,12 @@
               >Your Profile</a
             >
             <a
-              href="#"
+              href="./edit-profile.html"
               class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100"
               role="menuitem"
               tabindex="-1"
               id="user-menu-item-1"
-              >Settings</a
+              >Edit Profile</a
             >
             <a
               href="#"
@@ -220,14 +220,14 @@
           >Create New Post</a
         >
         <a
-          href="#"
+          href="./profile.html"
           class="block px-4 py-2 text-base font-medium text-gray-500 hover:bg-gray-100 hover:text-gray-800"
           >Your Profile</a
         >
         <a
-          href="#"
+          href="./edit-profile.html"
           class="block px-4 py-2 text-base font-medium text-gray-500 hover:bg-gray-100 hover:text-gray-800"
-          >Settings</a
+          >Edit Profile</a
         >
         <a
           href="#"
