--- a/templates/register.html
+++ b/templates/register.html
@@ -42,39 +42,39 @@
           class="space-y-6"
           action="#"
           method="POST">
-          <!-- Name -->
+          <!-- First Name -->
           <div>
             <label
-              for="name"
+              for="first_name"
               class="block text-sm font-medium leading-6 text-gray-900"
-              >Full Name</label
+              >First Name</label
             >
             <div class="mt-2">
               <input
-                id="name"
-                name="name"
+                id="first_name"
+                name="first_name"
                 type="text"
-                autocomplete="name"
-                placeholder="Alp Arslan"
+                autocomplete="first_name"
+                placeholder="Muhammad"
                 required
                 class="block w-full rounded-md border-0 p-2 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-black sm:text-sm sm:leading-6" />
             </div>
           </div>
 
-          <!-- Username -->
+          <!-- First Name -->
           <div>
             <label
-              for="username"
+              for="last_name"
               class="block text-sm font-medium leading-6 text-gray-900"
-              >Username</label
+              >Last Name</label
             >
             <div class="mt-2">
               <input
-                id="username"
-                name="username"
+                id="last_name"
+                name="last_name"
                 type="text"
-                autocomplete="username"
-                placeholder="alparslan1029"
+                autocomplete="last_name"
+                placeholder="Alp Arslan"
                 required
                 class="block w-full rounded-md border-0 p-2 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-black sm:text-sm sm:leading-6" />
             </div>
