Comments Count Added to Post Card, Profile Page Enhanced

--- a/templates/single.html
+++ b/templates/single.html
@@ -377,6 +377,8 @@
           <div class="flex items-center gap-2 text-gray-500 text-xs my-2">
             <span class="">6 minutes ago</span>
             <span class="">•</span>
+            <span>3 comments</span>
+            <span class="">•</span>
             <span>450 views</span>
           </div>
 
