--- a/templates/index.html
+++ b/templates/index.html
@@ -517,79 +517,36 @@
           </div>
 
           <!-- Barta Card Bottom -->
-          <!--          <footer class="border-t border-gray-200 pt-2">-->
-          <!--            &lt;!&ndash; Card Bottom Action Buttons &ndash;&gt;-->
-          <!--            <div class="flex items-center justify-between">-->
-          <!--              <div class="flex gap-8 text-gray-600">-->
-          <!--                &lt;!&ndash; Heart Button &ndash;&gt;-->
-          <!--                <button-->
-          <!--                  type="button"-->
-          <!--                  class="-m-2 flex gap-2 text-xs items-center rounded-full p-2 text-gray-600 hover:text-gray-800">-->
-          <!--                  <span class="sr-only">Like</span>-->
-          <!--                  <svg-->
-          <!--                    xmlns="http://www.w3.org/2000/svg"-->
-          <!--                    fill="none"-->
-          <!--                    viewBox="0 0 24 24"-->
-          <!--                    stroke-width="2"-->
-          <!--                    stroke="currentColor"-->
-          <!--                    class="w-5 h-5">-->
-          <!--                    <path-->
-          <!--                      stroke-linecap="round"-->
-          <!--                      stroke-linejoin="round"-->
-          <!--                      d="M21 8.25c0-2.485-2.099-4.5-4.688-4.5-1.935 0-3.597 1.126-4.312 2.733-.715-1.607-2.377-2.733-4.313-2.733C5.1 3.75 3 5.765 3 8.25c0 7.22 9 12 9 12s9-4.78 9-12z" />-->
-          <!--                  </svg>-->
+          <footer class="border-t border-gray-200 pt-2">
+            <!-- Card Bottom Action Buttons -->
+            <div class="flex items-center justify-between">
+              <div class="flex gap-8 text-gray-600">
+                <!-- Comment Button -->
+                <a
+                  href="./single.html"
+                  type="button"
+                  class="-m-2 flex gap-2 text-xs items-center rounded-full p-2 text-gray-600 hover:text-gray-800">
+                  <span class="sr-only">Comment</span>
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    fill="none"
+                    viewBox="0 0 24 24"
+                    stroke-width="2"
+                    stroke="currentColor"
+                    class="w-5 h-5">
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      d="M12 20.25c4.97 0 9-3.694 9-8.25s-4.03-8.25-9-8.25S3 7.444 3 12c0 2.104.859 4.023 2.273 5.48.432.447.74 1.04.586 1.641a4.483 4.483 0 01-.923 1.785A5.969 5.969 0 006 21c1.282 0 2.47-.402 3.445-1.087.81.22 1.668.337 2.555.337z" />
+                  </svg>
 
-          <!--                  <p>36</p>-->
-          <!--                </button>-->
-          <!--                &lt;!&ndash; /Heart Button &ndash;&gt;-->
-
-          <!--                &lt;!&ndash; Comment Button &ndash;&gt;-->
-          <!--                <button-->
-          <!--                  type="button"-->
-          <!--                  class="-m-2 flex gap-2 text-xs items-center rounded-full p-2 text-gray-600 hover:text-gray-800">-->
-          <!--                  <span class="sr-only">Comment</span>-->
-          <!--                  <svg-->
-          <!--                    xmlns="http://www.w3.org/2000/svg"-->
-          <!--                    fill="none"-->
-          <!--                    viewBox="0 0 24 24"-->
-          <!--                    stroke-width="2"-->
-          <!--                    stroke="currentColor"-->
-          <!--                    class="w-5 h-5">-->
-          <!--                    <path-->
-          <!--                      stroke-linecap="round"-->
-          <!--                      stroke-linejoin="round"-->
-          <!--                      d="M12 20.25c4.97 0 9-3.694 9-8.25s-4.03-8.25-9-8.25S3 7.444 3 12c0 2.104.859 4.023 2.273 5.48.432.447.74 1.04.586 1.641a4.483 4.483 0 01-.923 1.785A5.969 5.969 0 006 21c1.282 0 2.47-.402 3.445-1.087.81.22 1.668.337 2.555.337z" />-->
-          <!--                  </svg>-->
-
-          <!--                  <p>17</p>-->
-          <!--                </button>-->
-          <!--                &lt;!&ndash; /Comment Button &ndash;&gt;-->
-          <!--              </div>-->
-
-          <!--              <div>-->
-          <!--                &lt;!&ndash; Share Button &ndash;&gt;-->
-          <!--                <button-->
-          <!--                  type="button"-->
-          <!--                  class="-m-2 flex gap-2 text-xs items-center rounded-full p-2 text-gray-600 hover:text-gray-800">-->
-          <!--                  <span class="sr-only">Share</span>-->
-          <!--                  <svg-->
-          <!--                    xmlns="http://www.w3.org/2000/svg"-->
-          <!--                    fill="none"-->
-          <!--                    viewBox="0 0 24 24"-->
-          <!--                    stroke-width="1.5"-->
-          <!--                    stroke="currentColor"-->
-          <!--                    class="w-5 h-5">-->
-          <!--                    <path-->
-          <!--                      stroke-linecap="round"-->
-          <!--                      stroke-linejoin="round"-->
-          <!--                      d="M7.217 10.907a2.25 2.25 0 100 2.186m0-2.186c.18.324.283.696.283 1.093s-.103.77-.283 1.093m0-2.186l9.566-5.314m-9.566 7.5l9.566 5.314m0 0a2.25 2.25 0 103.935 2.186 2.25 2.25 0 00-3.935-2.186zm0-12.814a2.25 2.25 0 103.933-2.185 2.25 2.25 0 00-3.933 2.185z" />-->
-          <!--                  </svg>-->
-          <!--                </button>-->
-          <!--                &lt;!&ndash; /Share Button &ndash;&gt;-->
-          <!--              </div>-->
-          <!--            </div>-->
-          <!--            &lt;!&ndash; /Card Bottom Action Buttons &ndash;&gt;-->
-          <!--          </footer>-->
+                  <p>0</p>
+                </a>
+                <!-- /Comment Button -->
+              </div>
+            </div>
+            <!-- /Card Bottom Action Buttons -->
+          </footer>
           <!-- /Barta Card Bottom -->
         </article>
         <!-- /Barta Card -->
@@ -705,79 +662,35 @@
           </div>
 
           <!-- Barta Card Bottom -->
-          <!--          <footer class="border-t border-gray-200 pt-2">-->
-          <!--            &lt;!&ndash; Card Bottom Action Buttons &ndash;&gt;-->
-          <!--            <div class="flex items-center justify-between">-->
-          <!--              <div class="flex gap-8 text-gray-600">-->
-          <!--                &lt;!&ndash; Heart Button &ndash;&gt;-->
-          <!--                <button-->
-          <!--                  type="button"-->
-          <!--                  class="-m-2 flex gap-2 text-xs items-center rounded-full p-2 text-gray-600 hover:text-gray-800">-->
-          <!--                  <span class="sr-only">Like</span>-->
-          <!--                  <svg-->
-          <!--                    xmlns="http://www.w3.org/2000/svg"-->
-          <!--                    fill="currentColor"-->
-          <!--                    viewBox="0 0 24 24"-->
-          <!--                    stroke-width="2"-->
-          <!--                    stroke="currentColor"-->
-          <!--                    class="w-5 h-5">-->
-          <!--                    <path-->
-          <!--                      stroke-linecap="round"-->
-          <!--                      stroke-linejoin="round"-->
-          <!--                      d="M21 8.25c0-2.485-2.099-4.5-4.688-4.5-1.935 0-3.597 1.126-4.312 2.733-.715-1.607-2.377-2.733-4.313-2.733C5.1 3.75 3 5.765 3 8.25c0 7.22 9 12 9 12s9-4.78 9-12z" />-->
-          <!--                  </svg>-->
+          <footer class="border-t border-gray-200 pt-2">
+            <!-- Card Bottom Action Buttons -->
+            <div class="flex items-center justify-between">
+              <div class="flex gap-8 text-gray-600">
+                <!-- Comment Button -->
+                <button
+                  type="button"
+                  class="-m-2 flex gap-2 text-xs items-center rounded-full p-2 text-gray-600 hover:text-gray-800">
+                  <span class="sr-only">Comment</span>
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    fill="none"
+                    viewBox="0 0 24 24"
+                    stroke-width="2"
+                    stroke="currentColor"
+                    class="w-5 h-5">
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      d="M12 20.25c4.97 0 9-3.694 9-8.25s-4.03-8.25-9-8.25S3 7.444 3 12c0 2.104.859 4.023 2.273 5.48.432.447.74 1.04.586 1.641a4.483 4.483 0 01-.923 1.785A5.969 5.969 0 006 21c1.282 0 2.47-.402 3.445-1.087.81.22 1.668.337 2.555.337z" />
+                  </svg>
 
-          <!--                  <p>227</p>-->
-          <!--                </button>-->
-          <!--                &lt;!&ndash; /Heart Button &ndash;&gt;-->
-
-          <!--                &lt;!&ndash; Comment Button &ndash;&gt;-->
-          <!--                <button-->
-          <!--                  type="button"-->
-          <!--                  class="-m-2 flex gap-2 text-xs items-center rounded-full p-2 text-gray-600 hover:text-gray-800">-->
-          <!--                  <span class="sr-only">Comment</span>-->
-          <!--                  <svg-->
-          <!--                    xmlns="http://www.w3.org/2000/svg"-->
-          <!--                    fill="none"-->
-          <!--                    viewBox="0 0 24 24"-->
-          <!--                    stroke-width="2"-->
-          <!--                    stroke="currentColor"-->
-          <!--                    class="w-5 h-5">-->
-          <!--                    <path-->
-          <!--                      stroke-linecap="round"-->
-          <!--                      stroke-linejoin="round"-->
-          <!--                      d="M12 20.25c4.97 0 9-3.694 9-8.25s-4.03-8.25-9-8.25S3 7.444 3 12c0 2.104.859 4.023 2.273 5.48.432.447.74 1.04.586 1.641a4.483 4.483 0 01-.923 1.785A5.969 5.969 0 006 21c1.282 0 2.47-.402 3.445-1.087.81.22 1.668.337 2.555.337z" />-->
-          <!--                  </svg>-->
-
-          <!--                  <p>68</p>-->
-          <!--                </button>-->
-          <!--                &lt;!&ndash; /Comment Button &ndash;&gt;-->
-          <!--              </div>-->
-
-          <!--              <div>-->
-          <!--                &lt;!&ndash; Share Button &ndash;&gt;-->
-          <!--                <button-->
-          <!--                  type="button"-->
-          <!--                  class="-m-2 flex gap-2 text-xs items-center rounded-full p-2 text-gray-600 hover:text-gray-800">-->
-          <!--                  <span class="sr-only">Share</span>-->
-          <!--                  <svg-->
-          <!--                    xmlns="http://www.w3.org/2000/svg"-->
-          <!--                    fill="none"-->
-          <!--                    viewBox="0 0 24 24"-->
-          <!--                    stroke-width="1.5"-->
-          <!--                    stroke="currentColor"-->
-          <!--                    class="w-5 h-5">-->
-          <!--                    <path-->
-          <!--                      stroke-linecap="round"-->
-          <!--                      stroke-linejoin="round"-->
-          <!--                      d="M7.217 10.907a2.25 2.25 0 100 2.186m0-2.186c.18.324.283.696.283 1.093s-.103.77-.283 1.093m0-2.186l9.566-5.314m-9.566 7.5l9.566 5.314m0 0a2.25 2.25 0 103.935 2.186 2.25 2.25 0 00-3.935-2.186zm0-12.814a2.25 2.25 0 103.933-2.185 2.25 2.25 0 00-3.933 2.185z" />-->
-          <!--                  </svg>-->
-          <!--                </button>-->
-          <!--                &lt;!&ndash; /Share Button &ndash;&gt;-->
-          <!--              </div>-->
-          <!--            </div>-->
-          <!--            &lt;!&ndash; /Card Bottom Action Buttons &ndash;&gt;-->
-          <!--          </footer>-->
+                  <p>3</p>
+                </button>
+                <!-- /Comment Button -->
+              </div>
+            </div>
+            <!-- /Card Bottom Action Buttons -->
+          </footer>
           <!-- /Barta Card Bottom -->
         </article>
         <!-- /Barta Card -->
