--- a/templates/edit-profile.html
+++ b/templates/edit-profile.html
@@ -43,70 +43,70 @@
                   <h2 class="font-bold text-2xl">Barta</h2>
                 </a>
               </div>
-<!--              <div class="hidden sm:ml-6 sm:flex sm:space-x-8">-->
-<!--                &lt;!&ndash; Current: "border-gray-800 text-gray-900 font-semibold", Default: "border-transparent text-gray-600 hover:border-gray-300 hover:text-gray-800" &ndash;&gt;-->
-<!--                <a-->
-<!--                  href="#"-->
-<!--                  class="inline-flex items-center border-b-2 border-gray-800 px-1 pt-1 text-sm font-semibold text-gray-900"-->
-<!--                  >Discover</a-->
-<!--                >-->
-<!--                <a-->
-<!--                  href="#"-->
-<!--                  class="inline-flex items-center border-b-2 border-transparent px-1 pt-1 text-sm font-medium text-gray-600 hover:border-gray-300 hover:text-gray-800"-->
-<!--                  >For you</a-->
-<!--                >-->
-<!--                <a-->
-<!--                  href="#"-->
-<!--                  class="inline-flex items-center border-b-2 border-transparent px-1 pt-1 text-sm font-medium text-gray-600 hover:border-gray-300 hover:text-gray-800"-->
-<!--                  >People</a-->
-<!--                >-->
-<!--              </div>-->
+              <!--              <div class="hidden sm:ml-6 sm:flex sm:space-x-8">-->
+              <!--                &lt;!&ndash; Current: "border-gray-800 text-gray-900 font-semibold", Default: "border-transparent text-gray-600 hover:border-gray-300 hover:text-gray-800" &ndash;&gt;-->
+              <!--                <a-->
+              <!--                  href="#"-->
+              <!--                  class="inline-flex items-center border-b-2 border-gray-800 px-1 pt-1 text-sm font-semibold text-gray-900"-->
+              <!--                  >Discover</a-->
+              <!--                >-->
+              <!--                <a-->
+              <!--                  href="#"-->
+              <!--                  class="inline-flex items-center border-b-2 border-transparent px-1 pt-1 text-sm font-medium text-gray-600 hover:border-gray-300 hover:text-gray-800"-->
+              <!--                  >For you</a-->
+              <!--                >-->
+              <!--                <a-->
+              <!--                  href="#"-->
+              <!--                  class="inline-flex items-center border-b-2 border-transparent px-1 pt-1 text-sm font-medium text-gray-600 hover:border-gray-300 hover:text-gray-800"-->
+              <!--                  >People</a-->
+              <!--                >-->
+              <!--              </div>-->
             </div>
             <div class="hidden sm:ml-6 sm:flex gap-2 sm:items-center">
               <!-- This Button Should Be Hidden on Mobile Devices -->
-<!--              <button-->
-<!--                type="button"-->
-<!--                class="text-gray-900 hover:text-white border-2 border-gray-800 hover:bg-gray-900 focus:ring-2 focus:outline-none focus:ring-gray-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center hidden md:block">-->
-<!--                Create Post-->
-<!--              </button>-->
+              <!--              <button-->
+              <!--                type="button"-->
+              <!--                class="text-gray-900 hover:text-white border-2 border-gray-800 hover:bg-gray-900 focus:ring-2 focus:outline-none focus:ring-gray-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center hidden md:block">-->
+              <!--                Create Post-->
+              <!--              </button>-->
 
-<!--              <button-->
-<!--                type="button"-->
-<!--                class="rounded-full bg-white p-2 text-gray-800 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-gray-500 focus:ring-offset-2">-->
-<!--                <span class="sr-only">View notifications</span>-->
-<!--                &lt;!&ndash; Heroicon name: outline/bell &ndash;&gt;-->
-<!--                <svg-->
-<!--                  class="h-6 w-6"-->
-<!--                  xmlns="http://www.w3.org/2000/svg"-->
-<!--                  fill="none"-->
-<!--                  viewBox="0 0 24 24"-->
-<!--                  stroke-width="1.5"-->
-<!--                  stroke="currentColor"-->
-<!--                  aria-hidden="true">-->
-<!--                  <path-->
-<!--                    stroke-linecap="round"-->
-<!--                    stroke-linejoin="round"-->
-<!--                    d="M14.857 17.082a23.848 23.848 0 005.454-1.31A8.967 8.967 0 0118 9.75v-.7V9A6 6 0 006 9v.75a8.967 8.967 0 01-2.312 6.022c1.733.64 3.56 1.085 5.455 1.31m5.714 0a24.255 24.255 0 01-5.714 0m5.714 0a3 3 0 11-5.714 0" />-->
-<!--                </svg>-->
-<!--              </button>-->
+              <!--              <button-->
+              <!--                type="button"-->
+              <!--                class="rounded-full bg-white p-2 text-gray-800 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-gray-500 focus:ring-offset-2">-->
+              <!--                <span class="sr-only">View notifications</span>-->
+              <!--                &lt;!&ndash; Heroicon name: outline/bell &ndash;&gt;-->
+              <!--                <svg-->
+              <!--                  class="h-6 w-6"-->
+              <!--                  xmlns="http://www.w3.org/2000/svg"-->
+              <!--                  fill="none"-->
+              <!--                  viewBox="0 0 24 24"-->
+              <!--                  stroke-width="1.5"-->
+              <!--                  stroke="currentColor"-->
+              <!--                  aria-hidden="true">-->
+              <!--                  <path-->
+              <!--                    stroke-linecap="round"-->
+              <!--                    stroke-linejoin="round"-->
+              <!--                    d="M14.857 17.082a23.848 23.848 0 005.454-1.31A8.967 8.967 0 0118 9.75v-.7V9A6 6 0 006 9v.75a8.967 8.967 0 01-2.312 6.022c1.733.64 3.56 1.085 5.455 1.31m5.714 0a24.255 24.255 0 01-5.714 0m5.714 0a3 3 0 11-5.714 0" />-->
+              <!--                </svg>-->
+              <!--              </button>-->
 
-<!--              <button-->
-<!--                type="button"-->
-<!--                class="rounded-full bg-white p-2 text-gray-800 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-gray-500 focus:ring-offset-2">-->
-<!--                <span class="sr-only">Messages</span>-->
-<!--                <svg-->
-<!--                  xmlns="http://www.w3.org/2000/svg"-->
-<!--                  fill="none"-->
-<!--                  viewBox="0 0 24 24"-->
-<!--                  stroke-width="1.5"-->
-<!--                  stroke="currentColor"-->
-<!--                  class="w-6 h-6">-->
-<!--                  <path-->
-<!--                    stroke-linecap="round"-->
-<!--                    stroke-linejoin="round"-->
-<!--                    d="M7.5 8.25h9m-9 3H12m-9.75 1.51c0 1.6 1.123 2.994 2.707 3.227 1.129.166 2.27.293 3.423.379.35.026.67.21.865.501L12 21l2.755-4.133a1.14 1.14 0 01.865-.501 48.172 48.172 0 003.423-.379c1.584-.233 2.707-1.626 2.707-3.228V6.741c0-1.602-1.123-2.995-2.707-3.228A48.394 48.394 0 0012 3c-2.392 0-4.744.175-7.043.513C3.373 3.746 2.25 5.14 2.25 6.741v6.018z" />-->
-<!--                </svg>-->
-<!--              </button>-->
+              <!--              <button-->
+              <!--                type="button"-->
+              <!--                class="rounded-full bg-white p-2 text-gray-800 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-gray-500 focus:ring-offset-2">-->
+              <!--                <span class="sr-only">Messages</span>-->
+              <!--                <svg-->
+              <!--                  xmlns="http://www.w3.org/2000/svg"-->
+              <!--                  fill="none"-->
+              <!--                  viewBox="0 0 24 24"-->
+              <!--                  stroke-width="1.5"-->
+              <!--                  stroke="currentColor"-->
+              <!--                  class="w-6 h-6">-->
+              <!--                  <path-->
+              <!--                    stroke-linecap="round"-->
+              <!--                    stroke-linejoin="round"-->
+              <!--                    d="M7.5 8.25h9m-9 3H12m-9.75 1.51c0 1.6 1.123 2.994 2.707 3.227 1.129.166 2.27.293 3.423.379.35.026.67.21.865.501L12 21l2.755-4.133a1.14 1.14 0 01.865-.501 48.172 48.172 0 003.423-.379c1.584-.233 2.707-1.626 2.707-3.228V6.741c0-1.602-1.123-2.995-2.707-3.228A48.394 48.394 0 0012 3c-2.392 0-4.744.175-7.043.513C3.373 3.746 2.25 5.14 2.25 6.741v6.018z" />-->
+              <!--                </svg>-->
+              <!--              </button>-->
 
               <!-- Profile dropdown -->
               <div
@@ -209,69 +209,40 @@
         </div>
 
         <!-- Mobile menu, show/hide based on menu state. -->
-<!--        <div-->
-<!--          x-show="mobileMenuOpen"-->
-<!--          class="sm:hidden"-->
-<!--          id="mobile-menu">-->
-<!--          <div class="space-y-1 pt-2 pb-3">-->
-<!--            &lt;!&ndash; Current: "bg-gray-50 border-gray-800 text-gray-700", Default: "border-transparent text-gray-500 hover:bg-gray-50 hover:border-gray-300 hover:text-gray-700" &ndash;&gt;-->
-<!--            <a-->
-<!--              href="#"-->
-<!--              class="block border-l-4 border-gray-800 bg-gray-50 py-2 pl-3 pr-4 text-base font-medium text-gray-700"-->
-<!--              >Discover</a-->
-<!--            >-->
-<!--            <a-->
-<!--              href="#"-->
-<!--              class="block border-l-4 border-transparent py-2 pl-3 pr-4 text-base font-medium text-gray-500 hover:border-gray-300 hover:bg-gray-50 hover:text-gray-700"-->
-<!--              >For You</a-->
-<!--            >-->
-<!--            <a-->
-<!--              href="#"-->
-<!--              class="block border-l-4 border-transparent py-2 pl-3 pr-4 text-base font-medium text-gray-500 hover:border-gray-300 hover:bg-gray-50 hover:text-gray-700"-->
-<!--              >People</a-->
-<!--            >-->
-<!--          </div>-->
-<!--          <div class="border-t border-gray-200 pt-4 pb-3">-->
-<!--            <div class="flex items-center px-4">-->
-<!--              <div class="flex-shrink-0">-->
-<!--                <img-->
-<!--                  class="h-10 w-10 rounded-full"-->
-<!--                  src="https://avatars.githubusercontent.com/u/831997"-->
-<!--                  alt="Ahmed Shamim Hasan Shaon" />-->
-<!--              </div>-->
-<!--              <div class="ml-3">-->
-<!--                <div class="text-base font-medium text-gray-800">-->
-<!--                  Ahmed Shamim Hasan Shaon-->
-<!--                </div>-->
-<!--                <div class="text-sm font-medium text-gray-500">-->
-<!--                  shaon@shamim.com-->
-<!--                </div>-->
-<!--              </div>-->
-<!--            </div>-->
-<!--            <div class="mt-3 space-y-1">-->
-<!--              <a-->
-<!--                href="#"-->
-<!--                class="block px-4 py-2 text-base font-medium text-gray-500 hover:bg-gray-100 hover:text-gray-800"-->
-<!--                >Create New Post</a-->
-<!--              >-->
-<!--              <a-->
-<!--                href="./profile.html"-->
-<!--                class="block px-4 py-2 text-base font-medium text-gray-500 hover:bg-gray-100 hover:text-gray-800"-->
-<!--                >Your Profile</a-->
-<!--              >-->
-<!--              <a-->
-<!--                href="./edit-profile.html"-->
-<!--                class="block px-4 py-2 text-base font-medium text-gray-500 hover:bg-gray-100 hover:text-gray-800"-->
-<!--                >Edit Profile</a-->
-<!--              >-->
-<!--              <a-->
-<!--                href="#"-->
-<!--                class="block px-4 py-2 text-base font-medium text-gray-500 hover:bg-gray-100 hover:text-gray-800"-->
-<!--                >Sign out</a-->
-<!--              >-->
-<!--            </div>-->
-<!--          </div>-->
-<!--        </div>-->
+        <div
+          x-show="mobileMenuOpen"
+          class="sm:hidden"
+          id="mobile-menu">
+          <div class="border-t border-gray-200 pt-4 pb-3">
+            <div class="flex items-center px-4">
+              <div>
+                <div class="text-base font-medium text-gray-800">
+                  Ahmed Shamim Hasan Shaon
+                </div>
+                <div class="text-sm font-medium text-gray-500">
+                  shaon@shamim.com
+                </div>
+              </div>
+            </div>
+            <div class="mt-3 space-y-1">
+              <a
+                href="./profile.html"
+                class="block px-4 py-2 text-base font-medium text-gray-500 hover:bg-gray-100 hover:text-gray-800"
+                >Your Profile</a
+              >
+              <a
+                href="./edit-profile.html"
+                class="block px-4 py-2 text-base font-medium text-gray-500 hover:bg-gray-100 hover:text-gray-800"
+                >Edit Profile</a
+              >
+              <a
+                href="#"
+                class="block px-4 py-2 text-base font-medium text-gray-500 hover:bg-gray-100 hover:text-gray-800"
+                >Sign out</a
+              >
+            </div>
+          </div>
+        </div>
       </nav>
     </header>
 
@@ -291,40 +262,40 @@
             </p>
 
             <div class="mt-10 border-b border-gray-900/10 pb-12">
-<!--              <div class="col-span-full mt-10 pb-10">-->
-<!--                <label-->
-<!--                  for="photo"-->
-<!--                  class="block text-sm font-medium leading-6 text-gray-900"-->
-<!--                  >Photo</label-->
-<!--                >-->
-<!--                <div class="mt-2 flex items-center gap-x-3">-->
-<!--                  <input-->
-<!--                    class="hidden"-->
-<!--                    type="file"-->
-<!--                    name="avatar"-->
-<!--                    id="avatar" />-->
-<!--                  &lt;!&ndash; <img-->
-<!--                    class="h-12 w-12 rounded-full"-->
-<!--                    src="https://avatars.githubusercontent.com/u/831997"-->
-<!--                    alt="Ahmed Shamim Hasan Shaon" /> &ndash;&gt;-->
-<!--                  <svg-->
-<!--                    class="h-12 w-12 text-gray-300"-->
-<!--                    viewBox="0 0 24 24"-->
-<!--                    fill="currentColor"-->
-<!--                    aria-hidden="true">-->
-<!--                    <path-->
-<!--                      fill-rule="evenodd"-->
-<!--                      d="M18.685 19.097A9.723 9.723 0 0021.75 12c0-5.385-4.365-9.75-9.75-9.75S2.25 6.615 2.25 12a9.723 9.723 0 003.065 7.097A9.716 9.716 0 0012 21.75a9.716 9.716 0 006.685-2.653zm-12.54-1.285A7.486 7.486 0 0112 15a7.486 7.486 0 015.855 2.812A8.224 8.224 0 0112 20.25a8.224 8.224 0 01-5.855-2.438zM15.75 9a3.75 3.75 0 11-7.5 0 3.75 3.75 0 017.5 0z"-->
-<!--                      clip-rule="evenodd" />-->
-<!--                  </svg>-->
-<!--                  <label for="avatar">-->
-<!--                    <div-->
-<!--                      class="rounded-md bg-white px-2.5 py-1.5 text-sm font-semibold text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 hover:bg-gray-50">-->
-<!--                      Change-->
-<!--                    </div>-->
-<!--                  </label>-->
-<!--                </div>-->
-<!--              </div>-->
+              <!--              <div class="col-span-full mt-10 pb-10">-->
+              <!--                <label-->
+              <!--                  for="photo"-->
+              <!--                  class="block text-sm font-medium leading-6 text-gray-900"-->
+              <!--                  >Photo</label-->
+              <!--                >-->
+              <!--                <div class="mt-2 flex items-center gap-x-3">-->
+              <!--                  <input-->
+              <!--                    class="hidden"-->
+              <!--                    type="file"-->
+              <!--                    name="avatar"-->
+              <!--                    id="avatar" />-->
+              <!--                  &lt;!&ndash; <img-->
+              <!--                    class="h-12 w-12 rounded-full"-->
+              <!--                    src="https://avatars.githubusercontent.com/u/831997"-->
+              <!--                    alt="Ahmed Shamim Hasan Shaon" /> &ndash;&gt;-->
+              <!--                  <svg-->
+              <!--                    class="h-12 w-12 text-gray-300"-->
+              <!--                    viewBox="0 0 24 24"-->
+              <!--                    fill="currentColor"-->
+              <!--                    aria-hidden="true">-->
+              <!--                    <path-->
+              <!--                      fill-rule="evenodd"-->
+              <!--                      d="M18.685 19.097A9.723 9.723 0 0021.75 12c0-5.385-4.365-9.75-9.75-9.75S2.25 6.615 2.25 12a9.723 9.723 0 003.065 7.097A9.716 9.716 0 0012 21.75a9.716 9.716 0 006.685-2.653zm-12.54-1.285A7.486 7.486 0 0112 15a7.486 7.486 0 015.855 2.812A8.224 8.224 0 0112 20.25a8.224 8.224 0 01-5.855-2.438zM15.75 9a3.75 3.75 0 11-7.5 0 3.75 3.75 0 017.5 0z"-->
+              <!--                      clip-rule="evenodd" />-->
+              <!--                  </svg>-->
+              <!--                  <label for="avatar">-->
+              <!--                    <div-->
+              <!--                      class="rounded-md bg-white px-2.5 py-1.5 text-sm font-semibold text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 hover:bg-gray-50">-->
+              <!--                      Change-->
+              <!--                    </div>-->
+              <!--                  </label>-->
+              <!--                </div>-->
+              <!--              </div>-->
 
               <div class="grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
                 <div class="sm:col-span-3">
