Added Dynamic Footer Copyright Year

--- a/templates/index.html
+++ b/templates/index.html
@@ -904,7 +904,7 @@
         </div>
         <hr class="my-6 sm:mx-auto border-gray-700 lg:my-8" />
         <span class="block text-sm sm:text-center text-gray-200"
-          >© 2023
+          >©  <span x-data x-text="new Date().getFullYear()"></span>
           <a
             href="https://github.com/alnahian2003"
             class="hover:underline"
