--- a/templates/edit-profile.html
+++ b/templates/edit-profile.html
@@ -442,7 +442,7 @@ Less Talk, More Code 💻</textarea
         </div>
         <hr class="my-6 sm:mx-auto border-gray-700 lg:my-8" />
         <span class="block text-sm sm:text-center text-gray-200"
-          >© 2023
+          >©  <span x-data x-text="new Date().getFullYear()"></span>
           <a
             href="https://github.com/alnahian2003"
             class="hover:underline"
